--- a/index.html
+++ b/index.html
@@ -1,20 +1,30 @@
 <!doctype html>
-<html lang="en">
+<html lang="id">
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./images/HMIF-LOGO-BESAR.png" />
+
+  <link rel="icon" type="image/png" href="./images/HMIF-LOGO-BESAR.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#000000" />
+
+  <title>HMIF UNEJ - Himpunan Mahasiswa Informatika Universitas Jember</title>
+  <meta name="description" content="Situs resmi Himpunan Mahasiswa Informatika (HMIF) Universitas Jember. Temukan informasi kegiatan, program kerja, dan berita terbaru dari keluarga besar Informatika UNEJ." />
+  <meta property="og:title" content="HMIF UNEJ - Himpunan Mahasiswa Informatika" />
+  <meta property="og:description" content="Situs resmi Himpunan Mahasiswa Informatika (HMIF) Universitas Jember. Temukan informasi kegiatan, program kerja, dan berita terbaru." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://hmifunej.id/" />
+  <meta property="og:image" content="./images/HMIF-LOGO-BESAR.png" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:wght@400;500;600;700;800&family=Familjen+Grotesk:wght@400;500;600;700&family=BBH+Sans+Hegarty:wght@400;500;600;700&display=swap"
-    rel="stylesheet">
-  <title>HMIF UNEJ</title>
+  <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:wght@400;500;600;700;800&family=Familjen+Grotesk:wght@400;500;600;700&family=BBH+Sans+Hegarty:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js" async></script>
 </head>
 
 <body>
   <div id="root"></div>
+
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
